# wGPUCM

./: .gitignore  Cargo.toml  README.md
data/gid/box/: box.msh  box.res  t4 copy.res  t4.msh
src/: gid copy.rs  gid.rs  lib copy.rs  lib.rs  main.rs  shader.wgsl
