[package]
name = "tom_CM"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
serde={version="1",features=["derive"]}
serde_json = { version = "1.0", default-features = true, features = ["alloc"] }
cgmath = "0.18"
regex = "1.11.1"
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
instant = "0.1"
wgpu = "22.0"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
# NEW!
bytemuck = { version = "1.16", features = [ "derive" ] }
nalgebra = "0.33.2"
nalgebra-glm = "0.19.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


